fix: show scrollbar

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -18,17 +18,6 @@
   before:block before:absolute before:h-[2px] before:w-[calc(50%-0.75rem)] before:right-1/2 before:bottom-[7px] before:bg-sky-400
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-body {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-}
-
 @layer base {
   input[type='number']::-webkit-outer-spin-button,
   input[type='number']::-webkit-inner-spin-button,
